sass/src/pleiades.scss
@import "compass";

$black: #000;
$dark: #111;
$mid: #444;
$high: #999;
$white: #EEE;

@mixin rounded {
  border-radius: 3px;
}

@mixin rounded-face($color, $mag: 0.1, $offset: 50%) {
  background: $color;
  @include background-image(linear-gradient(top, rgba(white, $mag), rgba(black, 0) $offset, rgba(black, 0) (100% - $offset), rgba(black, $mag)));
}

@mixin raised-box($highalpha: 0.3, $lowalpha: 0.3) {
  box-shadow: 0 -1px 0px rgba(0, 0, 0, $lowalpha) inset, 0 1px 0px rgba(255, 255, 255, $highalpha) inset, 1px 1px 1px rgba(0,0,0, $lowalpha);
}

@mixin inset-text($color) {
  text-shadow: 0 -1px 0px rgba(0,0,0, 0.3);
  color: $color;
}

@mixin raised-text($color) {
  $alpha: 0.6;
  $factor: 100%;
  text-shadow: 0 1px 1px rgba(0, 0, 0, $alpha);
  color: $color;
}

@mixin inset-box($alpha: 0.3) {
  box-shadow: 0 -1px 0px rgba(0, 0, 0, $alpha), 0 1px 0px rgba(255, 255, 255, $alpha);
}

* {
	margin:0;
	padding:0;
}

/** General Style Info **/
body {
	background: $black;
	color: #fff;
	font-family:'lucida grande',verdana,helvetica,arial,sans-serif;
	font-size:90%;
	margin: 0;
  overflow-y: scroll;
}
a {
	color: #b1bbcc;
	text-decoration: underline;
	font-weight: bold;
}
a:hover {
  color: #e9f3f7;
	text-decoration:none;
}
a img {
	border:none;
}
h1, h2, h3, h4 {
	font-weight: normal;
	margin-bottom:0.5em;
}
h1 {
  @include raised-text($high);
  border-bottom: 1px solid $high;
	font-size: 2em;
	margin-top:1em;
}
h2 {
  clear: both;
	color: #e6523e;
	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
	font-size: 190%;
}
h3 {
	color: #2c6877;
	font-family:'Gill Sans','lucida grande', helvetica, arial, sans-serif;
	font-size: 165%;
}
h4 {
	color: #993;
	font-weight: normal;
}
ul, li {
	margin: 0 auto;
}
p {
	margin: 0 0 1em 0;
}

/** Layout **/
#container {
	text-align: left;
  max-width: 960px;
  margin: 0 auto;
}

#header{
	padding: 10px 20px;
}
#header h1 {
	line-height:20px;
	background: #003d4c url('../img/cake.icon.png') no-repeat left;
	color: #fff;
	padding: 0px 30px;
}
#header h1 a {
	color: #fff;
	background: #003d4c;
	font-weight: normal;
	text-decoration: none;
}
#header h1 a:hover {
	color: #fff;
	background: #003d4c;
	text-decoration: underline;
}
#content{
	clear: both;
	color: #eee;
	padding: 10px 20px 40px 20px;
	overflow: auto;
}
#footer {
	clear: both;
	padding: 6px 10px;
	text-align: right;
}

/** containers **/
div.form,
div.index,
div.view {
	float:right;
	width:76%;
	border-left:1px solid #666;
	padding:10px 2%;
}
div.actions {
	padding:10px 0px;
}
div.actions h3 {
	padding-top:0;
	color:#777;
}


/** Tables **/
table {
	border-right:0;
	clear: both;
	margin-bottom: 10px;
	width: 100%;
}
th {
  color: #e6523e;
	border:0;
	border-bottom:2px solid #555;
	text-align: left;
	padding:4px;
}
th a {
	display: block;
	padding: 2px 4px;
	text-decoration: none;
}
th a.asc:after {
	content: ' ⇣';
}
th a.desc:after {
	content: ' ⇡';
}
table tr td {
	padding: 6px;
	text-align: left;
	vertical-align: top;
}
table tr:nth-child(even) {
	background: $mid;
}
td.actions {
	text-align: center;
	white-space: nowrap;
}
table td.actions a {
	margin: 0px 6px;
	padding:2px 5px;
}

/* SQL log */
.cake-sql-log {
	background: #fff;
	color:#000;
}
.cake-sql-log td {
	padding: 4px 8px;
	text-align: left;
	font-family: Monaco, Consolas, "Courier New", monospaced;
}
.cake-sql-log caption {
	color:#000;
}

/** Paging **/
.paging {
	background:#fff;
	color: #ccc;
	margin-top: 1em;
	clear:both;
}
.paging .current,
.paging .disabled,
.paging a {
	text-decoration: none;
	padding: 5px 8px;
	display: inline-block
}
.paging > span {
	display: inline-block;
	border: 1px solid #ccc;
	border-left: 0;
}
.paging > span:hover {
	background: #efefef;
}
.paging .prev {
	border-left: 1px solid #ccc;
	-moz-border-radius: 4px 0 0 4px;
	-webkit-border-radius: 4px 0 0 4px;
	border-radius: 4px 0 0 4px;
}
.paging .next {
	-moz-border-radius: 0 4px 4px 0;
	-webkit-border-radius: 0 4px 4px 0;
	border-radius: 0 4px 4px 0;
}
.paging .disabled {
	color: #ddd;
}
.paging .disabled:hover {
	background: transparent;
}
.paging .current {
	background: #efefef;
	color: #c73e14;
}

/** Scaffold View **/
dl {
	line-height: 2em;
	margin: 0em 0em;
	width: 60%;
}
dl dd:nth-child(4n+2),
dl dt:nth-child(4n+1) {
	background: #f4f4f4;
}

dt {
	font-weight: bold;
	padding-left: 4px;
	vertical-align: top;
	width: 10em;
}
dd {
	margin-left: 10em;
	margin-top: -2em;
	vertical-align: top;
}

/** Forms **/
form {
	clear: both;
	margin-right: 20px;
	padding: 0;
	width: 95%;
}
fieldset {
	border: none;
	margin-bottom: 1em;
	padding: 16px 10px;
}
fieldset legend {
	color: #e32;
	font-size: 160%;
	font-weight: bold;
}
fieldset fieldset {
	margin-top: 0;
	padding: 10px 0 0;
}
fieldset fieldset legend {
	font-size: 120%;
	font-weight: normal;
}
fieldset fieldset div {
	clear: left;
	margin: 0 20px;
}
form div {
	clear: both;
	margin-bottom: 1em;
	padding: .5em;
	vertical-align: text-top;
}
form .input {
	color: $mid;
}
form .required {
	font-weight: bold;
}
form .required label:after {
	color: #e32;
	content: '*';
	display:inline;
}
form div.submit {
	border: 0;
	clear: both;
	margin-top: 10px;
}
label {
	color: #89a2cc;
  font-weight: bold;
	display: block;
	font-size: 110%;
	margin-bottom:3px;
}
input, textarea {
  background: #eee;
	clear: both;
	font-family: monospace;
	padding: 1%;
	width:98%;
}
select {
	clear: both;
	font-size: 120%;
	vertical-align: text-bottom;
}
select[multiple=multiple] {
	width: 100%;
}
option {
	font-size: 120%;
	padding: 0 3px;
}
input[type=checkbox] {
	clear: left;
	float: left;
	margin: 0px 6px 7px 2px;
	width: auto;
}
div.checkbox label {
	display: inline;
}
input[type=radio] {
	float:left;
	width:auto;
	margin: 6px 0;
	padding: 0;
	line-height: 26px;
}
.radio label {
	margin: 0 0 6px 20px;
	line-height: 26px;
}
input[type=submit] {
	display: inline;
	font-size: 110%;
	width: auto;
}
/* ... */

